Support dark mode - minor changes - Issue:74702

--- a/src/components/add-object/add-object.scss
+++ b/src/components/add-object/add-object.scss
@@ -1,6 +1,5 @@
 .AddObject {
-  color: var(--inelement-select-color);
-  font-size: var(--normal-font-size);
+  font-size: var(--normal-font-size);  
   clear: both;
   border-color: var(--gray-04);
   background-color: var(--color-background);
@@ -11,12 +10,9 @@
   padding: 1px 0px 1px 5px;
   height: 24px;
   vertical-align: middle;
-  font-family: var(--gxcf-font-family);
 }
 
 .AddObjectText {
   line-height: 24px;
   vertical-align: top;
-  color: var(--add-element-font-color);
-  font-size: var(--normal-font-size);
 }
