--- a/src/components/flow-full/flow-full.scss
+++ b/src/components/flow-full/flow-full.scss
@@ -34,7 +34,7 @@
 
 .Separator {
   margin: 0px;
-  border-top: 2px dashed var(--separator-line-color);
+  border-top: 2px dashed var(--gray-03);
   border-bottom: none;
   border-left: none;
   border-right: none;
